# libcap-ng

./: CMakeLists.txt
src/: cap-ng.c  config.h  lookup_table.c
